--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -631,6 +631,25 @@ pre code {
     }
 }
 
+@media(max-width:900px) {
+    .mySwiperProduct .swiper-slide {
+        max-width: 270px !important;
+    }
+
+    .flex-home-section .swiper .swiper-pagination {
+        margin-left: 0 !important;
+    }
+
+    .product-card {
+        width: 100% !important;
+    }
+
+    .product-image {
+        width: 100%;
+    }
+
+}
+
 @media(min-width:992px) {
 
     .container,
@@ -16507,306 +16526,362 @@ select option:hover {
     backface-visibility: hidden;
 }
 
-#homeSlider .slides .item {
-    position: relative;
-    min-height: 840px;
-    padding-top: 57px;
+.content-wrapper {
+    width: 100%;
+    min-height: 100vh;
+    background-color: white;
+    max-width: 1190px;
+    padding: 0 24px;
+    margin: 0 auto;
 }
 
-#homeSlider .slides .item .link-overlay {
-    position: absolute;
-    z-index: 5;
-    top: 0;
-    left: 0;
+.btn-discover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 109px;
+    height: 30px;
+    gap: 8px;
+    cursor: pointer;
+    background-color: #281e75;
+    color: #fff;
+    text-align: center;
+    user-select: none;
+    border: 1px solid transparent;
+    font-size: 1.143rem;
+    line-height: 1.2;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: left;
+}
+
+.intersection {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: 16rem;
+    gap: 19px;
+}
+
+.intersection-gap {
+    gap: 2px;
+}
+
+.intersection-header {
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 33.6px;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.intersection-text {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 21.6px;
+    text-align: center;
+    color: #525252;
+}
+
+.product-slider-container {
+    padding: 3rem 0;
+}
+
+.swiper-slide-product {
+    width: 270px;
+    box-shadow: 0px 0px 15px 0px #0000001A;
+}
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    width: 270px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: #FBFBFB;
+    gap: 17px;
+    box-shadow: 0px 0px 15px 0px #0000001A;
+}
+
+.content-product-card {
+    display: flex;
+    flex-direction: column;
+    gap: 17px;
+}
+
+.product-image {
+    border-radius: 0;
+}
+
+.product-header {
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 28px;
+    text-align: left;
+    margin-bottom: 0;
+}
+
+.product-text {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: left;
+}
+
+.border-custom-yellow {
+    background-color: #F39500;
+    width: 50px;
+    height: 2px;
+}
+
+.swiper {
     width: 100%;
     height: 100%;
-    display: none;
 }
 
-#homeSlider .slides .item .bg {
+.mySwiperProduct .swiper-pagination {
+    margin-left: 0 !important;
+}
+
+.mySwiperProduct .swiper-pagination {
+    position: relative;
+    padding-top: 30px;
+}
+
+.mySwiperProduct .swiper-slide {
+    display: flex;
+    overflow: hidden;
+    border-radius: 20px;
+    box-shadow: 0px 0px 15px 0px #0000001A;
+}
+
+.swiper .swiper-pagination {
+    margin-left: 15rem;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+    bottom: 0 !important;
+}
+
+.swiper-pagination-bullet {
+    background: #fff !important;
+    border: 2px solid #d2d2d2 !important;
+    width: 26px !important;
+    height: 10px !important;
+    opacity: 1 !important;
+    border-radius: 10px !important;
+}
+
+.swiper-pagination-bullet-active {
+    background: #f39500 !important;
+    border: none !important;
+}
+
+.swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-fraction {
+    bottom: 0 !important;
+}
+
+.swiper-pagination-bullet {
+    background: #fff !important;
+    border: 2px solid #d2d2d2 !important;
+    width: 26px !important;
+    height: 10px !important;
+    opacity: 1 !important;
+    border-radius: 10px !important;
+}
+
+.swiper-pagination-bullet-active {
+    background: #f39500 !important;
+    border: none !important;
+}
+
+.swiper-slide {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent !important;
+}
+
+.swiper-slide .swiper-image-home {
+    width: 100%;
+    height: auto;
+    max-width: 665px;
+    max-height: auto;
+    border-radius: 30px;
+    object-fit: cover;
+}
+
+.flex-home-section {
+    display: flex;
+    align-items: center;
+    position: relative;
+    flex-wrap: nowrap;
+}
+
+.flex-home-section .slider-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    z-index: 50;
+}
+
+.flex-home-section .slider-content .content-header {
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 33.6px;
+    text-align: left;
+    color: #474747;
+}
+
+
+
+@media (max-width: 1150px) {
+    .flex-home-section .slider-content .content-header {
+        font-size: 22px;
+        line-height: 26.4px;
+    }
+}
+
+.flex-home-section .slider-content .subcontent-header {
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 43.2px;
+    text-align: left;
+    color: #1d1d1d;
+}
+
+@media (max-width: 1150px) {
+    .flex-home-section .slider-content .subcontent-header {
+        font-size: 28px;
+        line-height: 26.4px;
+    }
+}
+
+.flex-home-section .slider-content .content-text {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+    color: #525252;
+}
+
+@media (max-width: 1150px) {
+    .flex-home-section .slider-content .content-text {
+        font-size: 18px;
+        line-height: 26.4px;
+    }
+}
+
+.flex-home-section .background-home {
+    background-image: url("/assets/images/nuhun-ankara-makarnasi-bg.jpg");
     position: absolute;
     z-index: 0;
     top: 0;
     left: 50%;
     display: block;
-    width: 1312px;
-    height: 837px;
-    background-image: url(../img/bg-slider.jpg);
+    width: 1339px;
+    height: 848px;
     background-repeat: no-repeat;
     background-position: right top;
     background-size: 100% 100%;
     margin-left: -1039px;
 }
 
-#homeSlider .slides .item .content-wrapper {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: nowrap;
-    align-items: center;
-    height: 100%;
-}
-
-#homeSlider .slides .item .content-wrapper .slider-link {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    display: block;
+.flex-home-section .swiper {
     width: 100%;
     height: 100%;
 }
 
-#homeSlider .slides .item .content-wrapper .image {
-    flex: 0 0 auto;
-    align-self: flex-start;
-    width: 665px;
-    border-radius: 30px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .25);
+.flex-home-section .swiper .swiper-pagination {
+    margin-left: 15rem;
 }
 
-#homeSlider .slides .item .content-wrapper .image a {
-    display: block;
+.flex-home-section .swiper-horizontal>.swiper-pagination-bullets,
+.flex-home-section .swiper-pagination-bullets.swiper-pagination-horizontal,
+.flex-home-section .swiper-pagination-custom,
+.flex-home-section .swiper-pagination-fraction {
+    bottom: 0 !important;
 }
 
-#homeSlider .slides .item .content-wrapper .image img {
-    width: 100% !important;
-    height: auto !important;
-    border-radius: 30px;
+.flex-home-section .swiper-pagination-bullet {
+    background: #fff !important;
+    border: 2px solid #d2d2d2 !important;
+    width: 26px !important;
+    height: 10px !important;
+    opacity: 1 !important;
+    border-radius: 10px !important;
 }
 
-#homeSlider .slides .item .content-wrapper .content {
-    flex: 1 1 auto;
-    font-family: "Lato", Arial, "Helvetica", sans-serif;
-    font-weight: 500;
-    font-size: 1.429rem;
-    line-height: 1.2;
-    padding-right: 2.857rem;
+.flex-home-section .swiper-pagination-bullet-active {
+    background: #f39500 !important;
+    border: none !important;
 }
 
-#homeSlider .slides .item .content-wrapper .content h1,
-#homeSlider .slides .item .content-wrapper .content h2,
-#homeSlider .slides .item .content-wrapper .content h3,
-#homeSlider .slides .item .content-wrapper .content h4 {
-    font-family: "Lato", Arial, "Helvetica", sans-serif;
-    font-size: 2.571rem;
-    color: #000;
-    margin: 0 0 1.429rem;
+.flex-home-section .swiper-slide {
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent !important;
 }
 
-#homeSlider .slides .item .content-wrapper .content h1 small,
-#homeSlider .slides .item .content-wrapper .content h2 small,
-#homeSlider .slides .item .content-wrapper .content h3 small,
-#homeSlider .slides .item .content-wrapper .content h4 small {
-    display: block;
-    font-family: "Lato", Arial, "Helvetica", sans-serif;
-    font-size: 2rem;
-    font-weight: 900;
-    margin-bottom: 1.143rem;
-    color: #525252;
-}
-
-#homeSlider .slides .item .content-wrapper .content .spot {
-    position: relative;
-    padding-left: 1rem;
-    margin-bottom: 2rem;
-}
-
-#homeSlider .slides .item .content-wrapper .content .spot::before {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 3px;
-    display: block;
-    width: 4px;
+.flex-home-section .swiper-slide img {
+    width: 100%;
     height: auto;
-    background-color: #f39500;
+    max-width: 655px;
+    max-height: 540px;
+    border-radius: 30px;
+    object-fit: cover;
 }
 
-#homeSlider .slides .item .content-wrapper .content>*:last-child {
-    margin-bottom: 0 !important;
-}
-
-#homeSlider .slides .slick-dots {
-    position: absolute;
-    bottom: 203px;
-    left: 50%;
-    width: 665px;
-    margin: 0 0 0 -80px;
-}
-
-@media(max-width:1249.98px) {
-    #homeSlider .slides .item {
-        min-height: 600px;
-        padding-top: 47px;
-    }
-
-    #homeSlider .slides .item .bg {
-        width: 941px;
-        height: 600px;
-        margin-left: -730px;
-    }
-
-    #homeSlider .slides .item .content-wrapper .image {
-        width: 440px;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content {
-        font-size: 1.2rem;
-        padding-right: 2.5rem;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content h1,
-    #homeSlider .slides .item .content-wrapper .content h2,
-    #homeSlider .slides .item .content-wrapper .content h3,
-    #homeSlider .slides .item .content-wrapper .content h4 {
-        font-size: 2.2rem;
-        margin: 0 0 1.2rem;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content h1 small,
-    #homeSlider .slides .item .content-wrapper .content h2 small,
-    #homeSlider .slides .item .content-wrapper .content h3 small,
-    #homeSlider .slides .item .content-wrapper .content h4 small {
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content .spot {
-        padding-left: 1rem;
-        margin-bottom: 2rem;
-    }
-
-    #homeSlider .slides .slick-dots {
-        bottom: 156px;
-        width: 440px;
-        margin-left: 30px;
+@media (max-width: 1150px) {
+    .flex-home-section .swiper-slide img {
+        max-width: 440px;
     }
 }
 
-@media(max-width:991.98px) {
-    #homeSlider .slides {
-        margin-bottom: 50px;
-    }
-
-    #homeSlider .slides .item {
-        min-height: 425px;
-        padding-top: 30px;
-    }
-
-    #homeSlider .slides .item .content-wrapper {
-        flex-direction: column;
-    }
-
-    #homeSlider .slides .item .content-wrapper .image {
+@media (max-width: 1000px) {
+    .flex-home-section .swiper {
         width: 100%;
-        margin-bottom: 30px;
     }
 
-    #homeSlider .slides .item .content-wrapper .content {
-        padding: 0;
-    }
-
-    #homeSlider .slides .slick-dots {
-        position: static;
-        width: 100%;
-        margin: 20px 0 0;
-    }
-}
-
-@media(max-width:767.98px) {
-    #homeSlider .slides {
-        margin-bottom: 26px;
-    }
-
-    #homeSlider .slides .item {
-        min-height: 300px;
-        padding: 0;
-    }
-
-    #homeSlider .slides .item .link-overlay {
-        display: block;
-    }
-
-    #homeSlider .slides .item .bg {
+    .flex-home-section .background-home {
         display: none;
     }
 
-    #homeSlider .slides .item .container {
-        padding: 0;
+    .flex-home-section .swiper-slide {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
     }
 
-    #homeSlider .slides .item .content-wrapper .image {
-        position: relative;
-        z-index: 1;
-        box-shadow: none;
-        margin: 0;
-    }
-
-    #homeSlider .slides .item .content-wrapper .image::before {
-        content: " ";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: block;
+    .flex-home-section .swiper-slide img {
         width: 100%;
+        max-width: none;
         height: auto;
-        padding-top: 20%;
-        background: linear-gradient(360deg, #fff 26.56%, rgba(255, 255, 255, 0) 100%);
+        object-fit: cover;
     }
 
-    #homeSlider .slides .item .content-wrapper .image img {
-        border-radius: 0;
+    .flex-home-section .slider-content {
+        padding: 1rem;
     }
 
-    #homeSlider .slides .item .content-wrapper .content {
-        position: relative;
-        z-index: 2;
-        font-size: 1.143rem;
-        line-height: 1.1875;
-        text-align: center;
-        padding: 0 10px;
-        margin-top: -15%;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content h1,
-    #homeSlider .slides .item .content-wrapper .content h2,
-    #homeSlider .slides .item .content-wrapper .content h3,
-    #homeSlider .slides .item .content-wrapper .content h4 {
-        font-size: 1.857rem;
-        line-height: 1.19231;
-        margin: 0 0 .714rem;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content h1 small,
-    #homeSlider .slides .item .content-wrapper .content h2 small,
-    #homeSlider .slides .item .content-wrapper .content h3 small,
-    #homeSlider .slides .item .content-wrapper .content h4 small {
-        font-size: 1.571rem;
-        margin-bottom: 0;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content .spot {
-        text-align: center;
-        padding-left: 0;
-        margin-bottom: .714rem;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content .spot::before {
-        display: none;
-        bottom: 3px;
-        width: 4px;
-        margin: 0;
-    }
-
-    #homeSlider .slides .item .content-wrapper .content .spot+.btn {
-        display: none;
-    }
-
-    #homeSlider .slides .slick-dots {
-        margin-top: 5px;
+    .flex-home-section .swiper-pagination {
+        margin-left: 0;
+        /* Mobilde ortalamak için */
+        bottom: 10px;
+        /* Bullets'ları sayfanın altına çekmek için */
     }
 }
 
