--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6530,14 +6530,6 @@ a.text-dark:focus {
     color: #000 !important;
 }
 
-.text-body {
-    color: #525252 !important;
-}
-
-.text-muted {
-    color: #6c757d !important;
-}
-
 .text-black-50 {
     color: rgba(0, 0, 0, .5) !important;
 }
@@ -7990,6 +7982,13 @@ select option:hover {
     line-height: 21.6px;
     color: white;
     margin: 0;
+}
+
+footer {
+    border-top: 1px solid #D2D2D2;
+    border-bottom: 1px solid #D2D2D2;
+    padding: 1.5rem 0;
+
 }
 
 @media (max-width: 1150px) {
